# vcsi

./: pyproject.toml
vcsi/: vcsi.py
