[project]
name = "vcsi"
version = "7.0.17"
description = "Create video contact sheets, thumbnails, screenshots"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "pillow",
    "numpy",
    "jinja2",
    "texttable",
    "parsedatetime",
]

[project.scripts]
vcsi = "vcsi.vcsi:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"